<?xml version="1.0"?>
<package>
  <name>radio_node_manager_main_controller</name>
  <version>0.0.0</version>
  <description>The radio_node_manager_main_controller package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>motion_detection_sensor_msgs</build_depend>
  <build_depend>radio_services</build_depend>  

  <run_depend>radio_services</run_depend>
  <run_depend>motion_detection_sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
